refactor(chrome): refactor context menu

--- a/css/variables.css
+++ b/css/variables.css
@@ -34,20 +34,21 @@
     --CUSTOM-CHROME-MARGIN-TOOLBAR-ICON: 3px 0px;
     --CUSTOM-CHROME-MARGIN-TOOLBAR-SEPERATOR: 5px 3px;
 
-    /* Chrome - Context Menus */
-    --CUSTOM-CHROME-COLOR-CONTEXT-BG: #2e2e2e;
-    --CUSTOM-CHROME-COLOR-CONTEXT-SEPERATOR: #5e5e5e;
-    --CUSTOM-CHROME-COLOR-CONTEXT-ITEM-BG: #2e2e2e;
-    --CUSTOM-CHROME-COLOR-CONTEXT-ITEM-HOVER-BG: #5e5e5e;
-    --CUSTOM-CHROME-COLOR-CONTEXT-ITEM-TEXT: #FFF;
-    --CUSTOM-CHROME-COLOR-CONTEXT-ITEM-HOVER-TEXT: #FFF;
-    --CUSTOM-CHROME-COLOR-CONTEXT-ITEM-SHORTCUT-TEXT: rgb(255, 255, 255, 0.5);
-    --CUSTOM-CHROME-SIZE-CONTEXT-BORDER-RADIUS: 14px;
-    --CUSTOM-CHROME-SIZE-CONTEXT-ITEM-BORDER-RADIUS: 8px;
-    --CUSTOM-CHROME-PADDING-CONTEX: 7px;
-    --CUSTOM-CHROME-PADDING-CONTEXT-ITEM: 7px 0px 7px 18px;
-    --CUSTOM-CHROME-BORDER-CONTEXT: 1px solid black;
-    --CUSTOM-CHROME-BOXSHADOW-CONTEXT: 2px 2px 3px rgb(0, 0, 0, 0.4);
+    /* Chrome - Context Menu */
+    --CHROME-CONTEXT-BG-COLOR: #2e2e2e;
+    --CHROME-CONTEXT-BORDER-RADIUS: 14px;
+    --CHROME-CONTEXT-PADDING: 7px;
+    --CHROME-CONTEXT-BORDER: 1px solid black;
+    --CHROME-CONTEXT-BOX-SHADOW: 2px 2px 3px rgb(0, 0, 0, 0.4);
+    --CHROME-CONTEXT-ITEM-BG-COLOR: #2e2e2e;
+    --CHROME-CONTEXT-ITEM-HOVER-BG-COLOR: #5e5e5e;
+    --CHROME-CONTEXT-ITEM-TEXT-COLOR: #FFF;
+    --CHROME-CONTEXT-ITEM-HOVER-TEXT-COLOR: #FFF;
+    --CHROME-CONTEXT-ITEM-SHORTCUT-TEXT-COLOR: rgb(255, 255, 255, 0.5);
+    --CHROME-CONTEXT-ITEM-BORDER-RADIUS: 8px;
+    --CHROME-CONTEXT-ITEM-PADDING: 7px 0px 7px 18px;
+    --CHROME-CONTEXT-SEPARATOR-COLOR: #5e5e5e;
+    --CHROME-CONTEXT-SEPARATOR-PADDING: 5px;
 
     /* Chrome - Autoscroll */
     --CHROME-AUTOSCROLL-BG-COLOR: #5e5e5e;
