refactor(chrome): refactor toolbar

--- a/css/variables.css
+++ b/css/variables.css
@@ -28,11 +28,11 @@
     --CUSTOM-CHROME-COLOR-URLBAR-OUTLINE: #00d9ff;
 
     /* Chrome - Toolbar */
-    --CUSTOM-CHROME-COLOR-TOOLBAR-BG: #2e2e2e;
-    --CUSTOM-CHROME-BORDER-TOOLBAR-EDGE: 1px solid black;
-    --CUSTOM-CHROME-SIZE-TOOLBAR-WIDTH: 30px;
-    --CUSTOM-CHROME-MARGIN-TOOLBAR-ICON: 3px 0px;
-    --CUSTOM-CHROME-MARGIN-TOOLBAR-SEPERATOR: 5px 3px;
+    --CHROME-TOOLBAR-BG: #2e2e2e;
+    --CHROME-TOOLBAR-EDGE-BORDER: 1px solid black;
+    --CHROME-TOOLBAR-WIDTH: 30px;
+    --CHROME-TOOLBAR-ICON-MARGIN: 3px 0px;
+    --CHROME-TOOLBAR-SEPARATOR-MARGIN: 5px 3px;
 
     /* Chrome - Context Menu */
     --CHROME-CONTEXT-BG-COLOR: #2e2e2e;
