fix(content): add missing color var

--- a/css/variables.css
+++ b/css/variables.css
@@ -3,6 +3,7 @@
     --CUSTOM-CHROME-COLOR-MAIN-BG: #4D4D4D;
     --CUSTOM-CHROME-COLOR-SEARCHBAR-BG: #131313;
     --CUSTOM-CHROME-COLOR-TAB-TEXT: #FFF;
+    --CUSTOM-CHROME-COLOR-TOOLBAR-BG: #222222;
 
     /* Chrome */
     --CUSTOM-CHROME-COLOR-TITLE-BG: #494949;
