refactor(vars): update chrome style

--- a/css/variables.css
+++ b/css/variables.css
@@ -47,9 +47,9 @@
     --CHROME-CONTEXT-ITEM-HOVER-TEXT-COLOR: #FFF;
     --CHROME-CONTEXT-ITEM-SHORTCUT-TEXT-COLOR: rgb(255, 255, 255, 0.5);
     --CHROME-CONTEXT-ITEM-BORDER-RADIUS: 8px;
-    --CHROME-CONTEXT-ITEM-PADDING: 7px 0px 7px 18px;
+    --CHROME-CONTEXT-ITEM-PADDING: 8px 9px;
     --CHROME-CONTEXT-SEPARATOR-COLOR: #5e5e5e;
-    --CHROME-CONTEXT-SEPARATOR-PADDING: 5px;
+    --CHROME-CONTEXT-SEPARATOR-PADDING: 4px;
 
     /* Chrome - Autoscroll */
     --CHROME-AUTOSCROLL-BG-COLOR: #5e5e5e;
