refactor(chrome): del the old bar implementations

--- a/userChrome.css
+++ b/userChrome.css
@@ -3,12 +3,11 @@
 /* ========================================================================== */
 /* ================================= GENERAL ================================ */
 /* ========================================================================== */
+/*
+- Force darkmode on all icons
+*/
 :root,
 :root * {
-    /* Toolbars text color */
-    --toolbar-color: var(--CUSTOM-CHROME-COLOR-TAB-TEXT) !important;
-    
-    /* Force darkmode on all icons */
     color-scheme: dark !important;
 }
 
@@ -17,403 +16,6 @@
 */
 browser {
     background-color: #222 !important;
-}
-
-/* ========================================================================== */
-/* ================================= CHROME ================================= */
-/* ========================================================================== */
-:root,
-:root * {
-    /*
-    - Opacity ratio for the tab backgrounds when FF isn't focused
-    
-    - BG color of toolbars
-    - BG color of title bar when FF is focused
-    - BG color of title bar when FF isn't focused
-    
-    - Outline color of tab
-    - Outline color of selected tab
-    - Shadow of selected tab
-    
-    - TX color of chrome button icons
-    - TX color of window button icons when FF is focused
-    - TX color of window button icons when FF isn't focused
-    
-    - BG color of chrome buttons when hovering
-    - Padding of the chrome buttons (determines their size, as well as their gap)
-    */
-    --inactive-titlebar-opacity: 1 !important;
-
-    --toolbar-bgcolor: var(--CHROME-TOOLBAR-BG) !important;
-    --toolbox-bgcolor: var(--CUSTOM-CHROME-COLOR-TITLE-BG) !important;
-    --toolbox-bgcolor-inactive: var(--CUSTOM-CHROME-COLOR-TITLE-BG) !important;
-
-    --tab-outline-color: none !important;
-    --tab-selected-outline-color: none !important;
-    --tab-selected-shadow: none !important;
-
-    --toolbarbutton-icon-fill: var(--CUSTOM-CHROME-COLOR-ICON-TEXT) !important;
-    --toolbox-textcolor: var(--CUSTOM-CHROME-COLOR-ICON-TEXT) !important;
-    --toolbox-textcolor-inactive: var(--CUSTOM-CHROME-COLOR-ICON-TEXT) !important;
-
-    --toolbarbutton-hover-background: var(--CUSTOM-CHROME-COLOR-ICON-HOVER-BG) !important;
-    --toolbarbutton-inner-padding: 7px !important;
-}
-
-/*
-- Change the bottom border
-(Container for the whole chrome)
-*/
-#navigator-toolbox {
-    border-bottom: var(--CHROME-TOOLBAR-EDGE-BORDER) !important;
-}
-
-/*
-- Set the height value. Set current/min/max together or
-it starts misbehaving for some reason
-(Toolsbar - everyhing above the navigation bar)
-*/
-#TabsToolbar {
-    height: var(--CUSTOM-CHROME-SIZE-TITLE-HEIGHT) !important;
-    min-height: var(--CUSTOM-CHROME-SIZE-TITLE-HEIGHT) !important;
-    max-height: var(--CUSTOM-CHROME-SIZE-TITLE-HEIGHT) !important;
-}
-
-/*
-- Remove vertical padding
-(Chrome minimize, restore, close buttons)
-*/
-hbox.titlebar-buttonbox>toolbarbutton {
-    padding: 0px 14px !important;
-}
-
-/*
-- Make it take up the entire toolsbar container
-- Add gaps from the sides
-(Toolsbar container for the tabs/buttons etc.)
-*/
-#TabsToolbar-customization-target {
-    height: 100% !important;
-    margin-inline: 5px 0px !important;
-}
-
-/*
-- Add gaps between the buttons
-(Toolsbar buttons)
-*/
-#TabsToolbar-customization-target>toolbarbutton {
-    padding: 0px 2px !important;
-}
-
-/*
-- Remove min-height
-- Make the padding match other buttons
-- Remove margin
-- Remove right border
-(Highest tabs container)
-*/
-#tabbrowser-tabs {
-    min-height: 0px !important;
-    padding-inline: 2px !important;
-    margin-inline: 0px !important;
-    border: none !important;
-}
-
-/*
-- Remove close icons
-(Close icon within each tab)
-*/
-image.tab-close-button.close-icon {
-    display: none !important;
-}
-
-/*
-- Remove existing padding
-- Add custom margin between tabs
-(Highes container for a tab)
-*/
-tab.tabbrowser-tab {
-    padding: 0px !important;
-    margin: 0px var(--CUSTOM-CHROME-SIZE-TABS-GAP) !important;
-}
-
-/*
-- Make height fill the container
-- Remove existing margin
-- Change border radius
-(Tab background and container)
-*/
-vbox.tab-background,
-hbox.tab-content {
-    height: 100% !important;
-    min-height: 100% !important;
-    margin: 0px !important;
-    border-radius: var(--CUSTOM-CHROME-SIZE-TABS-BORDER-RADIUS) !important;
-}
-
-/*
-- Remove border radius from the bottom corners when selected
-(Selected tab background and container)
-*/
-tab.tabbrowser-tab[selected] vbox.tab-background,
-tab.tabbrowser-tab[selected] hbox.tab-content {
-    border-bottom-left-radius: 0px !important;
-    border-bottom-right-radius: 0px !important;
-}
-
-/*
-- Add border for the selected tabs
-(Multi-selected tab background)
-*/
-tab.tabbrowser-tab[multiselected] vbox.tab-background {
-    border: var(--CUSTOM-CHROME-BORDER-TABS-MULTISELECT) !important;
-}
-
-/*
-- Remove the margin to make them visible again
-(Underline for the tabs inside groups)
-*/
-hbox.tab-group-line {
-    margin-bottom: 0px !important;
-}
-
-/*
-- Stop tab group container from getting inverten when opened
-(Tab group container's label)
-*/
-label.tab-group-label {
-    background-color: var(--tab-group-color-invert) !important;
-    color: var(--tab-group-label-text-dark) !important;
-    outline: none !important;
-}
-
-/*
-- Overwrite text color
-(Tab container for the selected tab)
-*/
-tab.tabbrowser-tab[selected] * {
-    color: var(--CUSTOM-CHROME-COLOR-TABS-SELECT-TEXT) !important;
-}
-
-/*
-- Change text color
-(Tab container for the non-selected tabs)
-*/
-tab.tabbrowser-tab:not([selected]) * {
-    color: var(--CUSTOM-CHROME-COLOR-TABS-TEXT) !important;
-}
-
-/*
-- Set the height of the navigation bar
-(Navigation bar - contains urlbar, navigation icons etc.)
-*/
-#nav-bar {
-    height: 37px !important;
-}
-
-/*
-- Cover the entire container
-- Remove minimum sizes
-- Remove padding
-- Match side margin to other icons
-(Highest Urlbar container)
-*/
-#urlbar-container {
-    height: 100% !important;
-    min-width: 0px !important;
-    min-height: 0px !important;
-    padding: 0px !important;
-    margin-inline: 7px !important;
-}
-
-/*
-- Set width to be the same when open/close
-- Set height to be the same when open/close
-- Remove the left margin placed only when open
-- Remove size limitations
-(Actual urlbar, including open/close. This element is always
-considered "fixed", regardless of any css properties)
-*/
-#urlbar {
-    width: var(--urlbar-width) !important;
-    margin-left: 0px !important;
-    min-width: 0px !important;
-    min-height: 0px !important;
-}
-
-/*
-- Set the height
-(Actual urlbar when it's not open)
-*/
-#urlbar:not([open]) {
-    height: 30px !important;
-}
-
-/*
-- Position to open from the same position as it is closed. Too much
-work to make it dynamic ¯\_(ツ)_/¯
-(Actual urlbar when it's open)
-*/
-#urlbar[open] {
-    top: calc(var(--CUSTOM-CHROME-SIZE-TITLE-HEIGHT) + 3px) !important;
-}
-
-/*
-- Set separate background
-(Tab container for the non-selected tabs)
-*/
-vbox.tab-background:not([selected]) {
-    background: var(--CUSTOM-CHROME-COLOR-TABS-BG) !important;
-}
-
-/*
-- Set separate background
-(Tab container for the selected tab)
-*/
-vbox.tab-background[selected] {
-    background: var(--CUSTOM-CHROME-COLOR-TABS-SELECT-BG) !important;
-}
-
-/*
-- Remove the padding
-- Set width and height to be the same when open/closed
-(Urlbar container for the elements inside)
-*/
-hbox.urlbar-input-container {
-    padding: 0px !important;
-    height: 100% !important;
-    width: 100% !important;
-}
-
-/*
-- Remove the space
-(Space at the very top right of chrome)
-*/
-hbox.titlebar-spacer {
-    display: none !important;
-}
-
-/* ========================================================================== */
-/* ================================= URLBAR ================================= */
-/* ========================================================================== */
-:root,
-:root * {
-    /*
-    - BG color of urlbar
-    - BG color of urlbar menu
-    - BG color of urlbar menu items when hovering
-    - BG color of urlbar menu items when selected
-
-    - TX color of urlbar ("serach with...")
-    - TX color of urlbar menu items
-    - TX color of urlbar menu links
-    - TX color of urlbar menu items when selected
-
-    - BG color of boxes2 (... right side of menu items)
-    - BG color of boxes2 when hovering
-    - TX color of boxes2
-    - TX color of boxes2 when hovering
-
-    - Outline color of urlbar
-   */
-    --toolbar-field-background-color: var(--CUSTOM-CHROME-COLOR-URLBAR-BG) !important;
-    --toolbar-field-focus-background-color: var(--toolbar-field-background-color) !important;
-    --urlbarView-hover-background: var(--CUSTOM-CHROME-COLOR-URLBAR-HOVER-BG) !important;
-    --urlbarView-highlight-background: var(--CUSTOM-CHROME-COLOR-URLBAR-SELECT-BG) !important;
-
-    --toolbar-field-color: var(--CUSTOM-CHROME-COLOR-URLBAR-TEXT) !important;
-    --toolbar-field-focus-color: var(--toolbar-field-color) !important;
-    --link-color: var(--CUSTOM-CHROME-COLOR-URLBAR-LINK-TEXT) !important;
-    --urlbarView-highlight-color: var(--CUSTOM-CHROME-COLOR-URLBAR-SELECT-TEXT) !important;
-
-    --urlbarView-result-button-selected-background-color: var(--CUSTOM-CHROME-COLOR-URLBAR-BG) !important;
-    --urlbarView-result-button-hover-background-color: var(--CUSTOM-CHROME-COLOR-URLBAR-BG) !important;
-    --urlbarView-result-button-selected-color: var(--CUSTOM-CHROME-COLOR-URLBAR-TEXT) !important;
-    --urlbarView-result-button-hover-color: var(--CUSTOM-CHROME-COLOR-URLBAR-TEXT) !important;
-
-    --focus-outline-color: var(--CUSTOM-CHROME-COLOR-URLBAR-OUTLINE) !important;
-}
-
-/*
-- Remove all backgrounds
-- Turn clickable are into a circle
-- Change cursor to clickable
-(Urlbar boxes (permissions, bookmarked, zoom etc.)
-*/
-#urlbar-go-button,
-#page-action-buttons>hbox,
-#urlbar-zoom-button,
-hbox.urlbar-input-container>box:not(#identity-box),
-hbox.urlbar-input-container>box>box {
-    background: none !important;
-    border-radius: 999px !important;
-    cursor: pointer !important;
-}
-
-/*
-- Change cursor to clickable
-(Urlbar menu items ... icon)
-*/
-span.urlbarView-button.urlbarView-button-menu {
-    cursor: pointer !important;
-}
-
-/*
-- Make selected item text bold
-(Urlbar menu selected item)
-*/
-span[aria-selected='true']>span {
-    font-weight: bold !important;
-}
-
-/*
-- Increase border radius
-(Urlbar)
-*/
-hbox.urlbar-input-container {
-    border-radius: 13px !important;
-}
-
-/* 
-- Make the text more visible
-(Urlbar placeholder text)
-*/
-hbox.urlbar-input-container *::placeholder {
-    color: color-mix(in srgb, currentColor 70%, transparent) !important;
-}
-
-/* 
-- Make the color match the placeholder text
-(Urlbar search icon)
-*/
-#identity-box {
-    fill-opacity: 0.5 !important;
-}
-
-/*
-- Make the pin icons match the text color
-(Urlbar menu items pin icon)
-*/
-span.urlbarView-type-icon {
-    fill: var(--CUSTOM-CHROME-COLOR-URLBAR-TEXT) !important;
-}
-
-/*
-- Remove the borders
-- Increase border radius to match the original urlbar
-(Urlbar dropdown menu)
-*/
-#urlbar-background {
-    border: none !important;
-    border-radius: 13px !important;
-}
-
-/*
-- Remove the top border
-(Urlbar dropdown menu container)
-*/
-div.urlbarView-body-inner {
-    border: 0px !important;
 }
 
 /* ========================================================================== */
@@ -566,7 +168,6 @@ html[inFullscreen='true'] #browser {
 /* ========================================================================== */
 /* ================================= CONTEXT ================================ */
 /* ========================================================================== */
-
 /*
 - Remove the background (setting background to transparent isn't enough)
 (Biggest container for all context menus)
