--- a/userContent.css
+++ b/userContent.css
@@ -1,4 +1,4 @@
-@import "css/variables.css";
+@import "style.css";
 
 /* ---------------------------- General ---------------------------- */
 @-moz-document url-prefix(about:) {
