--- a/style.css
+++ b/style.css
@@ -53,9 +53,9 @@
 
     /* Chrome - Autoscroll */
     --CHROME-AUTOSCROLL-BG-COLOR: #5e5e5e;
-    --CHROME-AUTOSCROLL-IMAGE-DEFAULT: url('./userChrome/assets/autoscroll.svg');
-    --CHROME-AUTOSCROLL-IMAGE-HORIZONTAL: url('./userChrome/assets/autoscrollHorizontal.svg');
-    --CHROME-AUTOSCROLL-IMAGE-VERTICAL: url('./userChrome/assets/autoscrollVertical.svg');
+    --CHROME-AUTOSCROLL-IMAGE-DEFAULT: url('./assets/autoscroll.svg');
+    --CHROME-AUTOSCROLL-IMAGE-HORIZONTAL: url('./assets/autoscrollHorizontal.svg');
+    --CHROME-AUTOSCROLL-IMAGE-VERTICAL: url('./assets/autoscrollVertical.svg');
     --CHROME-AUTOSCROLL-SIZE: 28px;
     --CHROME-AUTOSCROLL-RADIUS: 100%;
     --CHROME-AUTOSCROLL-BORDER: 1px solid black;
